ViTables ChangeLog
==================
** October 06, 2013 **
Fixed a bug regarding unicode strings.

Some minor changes (typos and similar things) have been done.

The Plugins Manager has been debugged.

The timeseries plugin has been debugged. Interpolation errors have been fixed.

The development of a plugin for sorting the databases tree has started :)

** October 02, 2013 **
The package preferences has been analyzed with pylint.

The package plugins has been analyzed with pylint.

** September 30, 2013 **
refactoring module names to follow PEP 8.

Checking modules directly under the vitables package with pylint.

The package docbrowser has been analyzed with pylint.

The package h5db has been analyzed with pylint.

The package nodeprops has been analyzed with pylint.

The package vtwidgets has been analyzed with pylint.

The package vttables has been analyzed with pylint.

The package queries has been analyzed with pylint.

** September 25, 2013 **
Refactoring module names to follow PEP 8.
nodeInfo.py -> nodeinfo.py

Refactoring module names to follow PEP 8.
linkPropDlg.py -> linkpropdlg.py

Refactoring module names to follow PEP 8.
leafPropPage.py -> leafproppage.py

Refactoring module names to follow PEP 8.
leafPropDlg.py -> leafpropdlg.py

Refactoring module names to follow PEP 8.
groupPropPage.py -> groupproppage.py

Refactoring module names to follow PEP 8.
groupPropDlg.py -> grouppropdlg.py

Refactoring module names to follow PEP 8.
attrPropDlg.py -> attrpropdlg.py

Refactoring module names to follow PEP 8.
attrEditor.py -> attreditor.py

Refactoring module names to follow PEP 8.
tnodeEditor.py -> tnode_editor.py

Refactoring module names to follow PEP 8.
tlinkEditor.py -> tlink_editor.py

Refactoring module names to follow PEP 8.
rootGroupNode.py -> rootgroupnode.py

Refactoring module names to follow PEP 8.
nodeItemDelegate.py -> nodeitemdelegate.py

Refactoring module names to follow PEP 8.
linkNode.py -> linknode.py
