@@ -1,3 +1,3 @@
 [DBsTreeSorting]
-algorithm = default
+algorithm = human
 
